# sckit_recorder_rs

./: Cargo.toml
examples/: record_screen.rs
src/: capturer.rs  encoder.rs  lib.rs  main.rs
