[package]
name = "sckit_recorder_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
cidre = { git = "https://github.com/yury/cidre/", features = [
    "blocks",
    "async",
    "dispatch",
    "av",
    "cf",
    "cat",
    "cm",
    "ns",
    "sc",
    "vt",
], default-features = false }
	futures = "0.3"
thiserror = "2.0.9"
tokio = { version = "1", features = ["full"] }
